[package]
name = "canopy-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.13", features = ["full"] }
quote = "1.0.15"
proc-macro2 = "1.0.36"
litrs = "0.4.0"
structmeta = "0.2.0"
proc-macro-error = "1.0.4"
thiserror = "1.0.31"
anyhow = "1.0.58"
regex = "1.6.0"
lazy_static = "1.4.0"

[dev-dependencies]
canopy = { path = "../canopy" }
pretty_assertions = "1.3.0"
