[package]
name = "canopy"
authors = ["Aldo Cortesi <aldo@corte.si>"]
version = "0.0.1"
edition = "2021"


[dependencies]
crossterm = "0.26.0"
pad = "0.1.6"
textwrap = "0.15.0"
color-backtrace = "0.5.1"
scopeguard = "1.1.0"

canopy-derive = { path = "../canopy-derive" }
thiserror = "1.0.30"
bitvec = "1.0.0"
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
comfy-table = "6.0.0"
convert_case = "0.6.0"
regex = "1.5.5"
rhai = { version="1.7.0", features=["no_std"] }

[dev-dependencies]
clap = { version = "3.1.12", features = ["derive"] }
rand = "0.8.4"
