[package]
name = "canopy-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
structmeta = "0.3.0"
proc-macro-error = "1.0.4"
thiserror = "2.0.12"
convert_case = "0.10.0"

[dev-dependencies]
anyhow = "1.0.98"
canopy = { path = "../canopy" }
pretty_assertions = "1.4.1"

[lints]
workspace = true
