[package]
name = "canopy-derive"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
structmeta = "0.3.0"
proc-macro-error = "1.0.4"
thiserror = "2.0.18"
convert_case = "0.11.0"

[dev-dependencies]
anyhow = "1.0.102"
canopy = { path = "../canopy" }
pretty_assertions = "1.4.1"

[lints]
workspace = true
