[package]
name = "canopy-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
canopy = { version = "0.0.1", path = "../canopy", features = ["testing", "typecheck"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tmcp = { version = "0.4.0", path = "../../../tmcp/crates/tmcp" }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "time", "sync"] }

[lints]
workspace = true
