[package]
name = "canopy-widgets"
authors = ["Aldo Cortesi <aldo@corte.si>"]
version = "0.0.1"
edition = "2024"

[dependencies]
canopy-core = { path = "../canopy-core" }
canopy-derive = { path = "../canopy-derive" }
textwrap = "0.16.2"
tracing = "0.1.41"
regex = "1.11.1"
rhai = { version = "1.22.2", features = ["internals"] }
pad = "0.1.6"