[package]
name = "canopy-widgets"
authors = ["Aldo Cortesi <aldo@corte.si>"]
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
canopy = { path = "../canopy" }
canopy-derive = { path = "../canopy-derive" }

# Widget-specific dependencies
textwrap = "0.16.2"
pad = "0.1.6"
unicode-width = "0.2.2"
unicode-segmentation = "1.12.0"
image = "0.25.9"
ropey = "1.6.1"
syntect = "5.3.0"
alacritty_terminal = "0.25.1"
portable-pty = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.100"

[dev-dependencies]
canopy = { path = "../canopy", features = ["testing"] }
criterion = "0.8"
proptest = "1.9.0"

[features]
testing = []

[[bench]]
name = "editor"
harness = false
required-features = ["testing"]

[[bench]]
name = "rendering"
harness = false
required-features = ["testing"]

[lints]
workspace = true
