[package]
name = "canopy-widgets"
authors = ["Aldo Cortesi <aldo@corte.si>"]
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
canopy = { path = "../canopy" }
canopy-derive = { path = "../canopy-derive" }

# Widget-specific dependencies
textwrap = "0.16.2"
unicode-width = "0.2.2"
unicode-segmentation = "1.13.2"
image = "0.25.10"
ropey = "1.6.1"
syntect = "5.3.0"
alacritty_terminal = "0.25.1"
portable-pty = "0.9.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
fontdue = "0.9.3"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "time", "sync"] }
itty = { version = "0.1.0", path = "../../../eguitty/crates/itty" }

[dev-dependencies]
canopy = { path = "../canopy", features = ["testing"] }
criterion = "0.8"
itty-script = { path = "../../../eguitty/crates/itty-script" }
proptest = "1.11.0"

[features]
testing = []

[[bench]]
name = "editor"
harness = false
required-features = ["testing"]

[[bench]]
name = "rendering"
harness = false
required-features = ["testing"]

[lints]
workspace = true
