[package]
name = "canopy"
authors = ["Aldo Cortesi <aldo@corte.si>"]
version = "0.0.1"
edition.workspace = true
license.workspace = true

[dependencies]
# From canopy-core
crossterm = "0.29.0"
thiserror = "2.0.12"
bitvec = "1.0.1"
scopeguard = "1.2.0"
convert_case = "0.10"
rhai = { version = "1.22.2", features = ["internals"] }
regex = "1.11.1"
termcolor = "1.4.1"
comfy-table = "7.1.4"
color-backtrace = "0.7.0"
scoped-tls = "1.0.1"

# From canopy-widgets
textwrap = "0.16.2"
pad = "0.1.6"

# Existing
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
canopy-derive = { path = "../canopy-derive" }
slotmap = "1.1.1"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"

[dev-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
criterion = "0.8"

[features]
testing = []

[[bench]]
name = "rendering"
harness = false

[lints]
workspace = true
