[package]
name = "canopyctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
canopy-mcp = { version = "0.1.0", path = "../canopy-mcp" }
clap = { version = "4.6.1", features = ["derive"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tmcp = { version = "0.4.0", path = "../../../tmcp/crates/tmcp" }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "process", "net", "time", "sync"], default-features = false }
toml = "1.1.2"

[lints]
workspace = true
