[package]
name = "canopy-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
canopy = { path = "../canopy" }
clap = { version = "4.5.0", features = ["derive"] }
rand = "0.9.1"
textwrap = "0.16.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicode-width = "0.2.2"

[dev-dependencies]
canopy = { path = "../canopy", features = ["testing"] }

[lints]
workspace = true

[[example]]
name = "cedit"
path = "examples/cedit.rs"

[[example]]
name = "chargym"
path = "examples/chargym.rs"

[[example]]
name = "focusgym"
path = "examples/focusgym.rs"

[[example]]
name = "framegym"
path = "examples/framegym.rs"

[[example]]
name = "intervals"
path = "examples/intervals.rs"

[[example]]
name = "listgym"
path = "examples/listgym.rs"

[[example]]
name = "termgym"
path = "examples/termgym.rs"

[[example]]
name = "pager"
path = "examples/pager.rs"

[[example]]
name = "stylegym"
path = "examples/stylegym.rs"

[[example]]
name = "test_text"
path = "examples/test_text.rs"
